docs: add documentation for Show Cattle
