# handler/show_cattle.go
@@ -7,6 +7,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// @BasePath /api/v1
+
+// @Summary Show cattle
+// @Description Delete one cattle
+// @Tags Cattle
+// @Accept json
+// @Produce json
+// @Param id query string true "Cattle identification"
+// @Success 200 {object} ShowCattleResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 404 {object} ErrorResponse
+// @Router /cattle [get]
 func ShowCattleHandler(ctx *gin.Context) {
 	id := ctx.Query("id")
 	if id == "" {
